--- a/Google Search Maps Button/Base.lproj/Main.html
+++ b/Google Search Maps Button/Base.lproj/Main.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <img src="../Icon.png" width="128" height="128" alt="Google Search Maps Button Icon">
-    <p class="state-unknown">You can turn on Google Search Maps Button’s extension in Safari Extensions preferences.</p>
-    <p class="state-on">Google Search Maps Button’s extension is currently on. You can turn it off in Safari Extensions preferences.</p>
-    <p class="state-off">Google Search Maps Button’s extension is currently off. You can turn it on in Safari Extensions preferences.</p>
+    <p class="state-unknown">You can turn on Search Maps Button’s extension in Safari Extensions preferences.</p>
+    <p class="state-on">Search Maps Button’s extension is currently on. You can turn it off in Safari Extensions preferences.</p>
+    <p class="state-off">Search Maps Button’s extension is currently off. You can turn it on in Safari Extensions preferences.</p>
     <button class="open-preferences">Quit and Open Safari Extensions Preferences…</button>
 </body>
 </html>
